--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "yup": "0.32.8"
   },
   "scripts": {
-    "start": "HTTPS=true react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
